cluedo-vitry/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluedo-vitry
  namespace: cluedo-vitry
  labels:
    app.kubernetes.io/name: cluedo-vitry
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: cluedo-vitry
    app.kubernetes.io/component: web
